# HUGO1.1

data/: AM81-2-2.CNG.swc  H16-03-001-01-09-01_559391771_m.CNG.swc  H16-03-001-01-09-01_559391771_m.CNG.swc.bak
data/ficheros ejemplo/: 092105jm10.CNG.swc  AM101-3-1.CNG.swc  AM48-2.CNG.swc  AM81-2-2.CNG.swc  dHSE_04r.CNG.swc
data/ficherosConComa/: 030502-3.CNG.swc  030506-3.CNG.swc  092105jm10.CNG.swc  AM101-3-1.CNG.swc  AM47-3-1.CNG.swc  AM48-2.CNG.swc  AM58-1.CNG.swc  AM73-5-1.CNG.swc  AM81-2-2.CNG.swc  AM81-2-3.CNG.swc  AM85-2-1.CNG.swc  ExampleNeuron.swc  JMn030105-20-3.CNG.swc  JMn032205-10-2.CNG.swc  VS2-fluoro06.CNG.swc  dHSE_04r.CNG.swc  skel2_joju.csv  skel2_spine.swc
data/ficherosConPunto/: 030502-3.CNG.swc  030506-3.CNG.swc  AM47-3-1.CNG.swc  AM58-1.CNG.swc  AM73-5-1.CNG.swc  AM81-2-3.CNG.swc  AM85-2-1.CNG.swc  JMn030105-20-3.CNG.swc  JMn032205-10-2.CNG.swc  VS2-fluoro06.CNG.swc  skel2_joju_reduced.csv  skel2_spine.swc
source/hugo/: CMakeLists.txt  Makefile  baseDatosObjetos.cpp  baseDatosObjetos.h  base_datos_objetos.cpp  base_datos_objetos.h  hugo.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  myOpenGLWidget.cpp  myOpenGLWidget.h  myOpenGLWidget2D.cpp  myOpenGLWidget2D.h  myopenglwidget.cpp  myopenglwidget.h  myopenglwidget2D.h  myopenglwidget2d.cpp  myopenglwidget2d.h  openGLDialog.cpp  openGLDialog.h  resources.qrc
source/hugo/graphics/: CMakeCache.txt  VarEstado.h  VarLongitud.h  VarPosDendritas.h  VariableEstado.h  VariableLongitud.h  axonG.cpp  axonG.h  axon_g.cpp  axon_g.h  dendriteG.cpp  dendriteG.h  dendrite_g.cpp  dendrite_g.h  graphicObjects.h  graphic_axon.cpp  graphic_axon.h  graphic_dendrite.cpp  graphic_dendrite.h  graphic_neuron.cpp  graphic_neuron.h  graphic_objects.h  graphic_soma.cpp  graphic_soma.h  neuriteG.cpp  neuriteG.h  neurite_g.cpp  neurite_g.h  neuronG.cpp  neuronG.h  neuron_g.cpp  neuron_g.h  sectionH.cpp  sectionH.h  somaG.cpp  somaG.h  soma_g.cpp  soma_g.h
source/hugo/objetos/: axon.cpp  axon.h  dendrites.cpp  dendrites.h  neuron.cpp  neuron.h  objetos.h  soma.cpp  soma.h
